# LaserScanCar

./: README.md  build.sh  run.sh
install/: local_setup.sh  setup.sh
install/laser_consumer/lib/laser_consumer/: laser_consumer
install/laser_consumer/share/ament_index/resource_index/package_run_dependencies/: laser_consumer
install/laser_consumer/share/ament_index/resource_index/parent_prefix_path/: laser_consumer
install/laser_consumer/share/laser_consumer/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/laser_consumer/share/laser_consumer/cmake/: laser_consumerConfig-version.cmake  laser_consumerConfig.cmake
install/laser_consumer/share/laser_consumer/environment/: ament_prefix_path.dsv  path.dsv
install/ldlidar_stl_ros2/lib/ldlidar_stl_ros2/: ldlidar_stl_ros2_node
install/ldlidar_stl_ros2/share/ament_index/resource_index/package_run_dependencies/: ldlidar_stl_ros2
install/ldlidar_stl_ros2/share/ament_index/resource_index/parent_prefix_path/: ldlidar_stl_ros2
install/ldlidar_stl_ros2/share/ldlidar_stl_ros2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ldlidar_stl_ros2/share/ldlidar_stl_ros2/cmake/: ldlidar_stl_ros2Config-version.cmake  ldlidar_stl_ros2Config.cmake
install/ldlidar_stl_ros2/share/ldlidar_stl_ros2/environment/: ament_prefix_path.dsv  path.dsv
install/ldlidar_stl_ros2/share/ldlidar_stl_ros2/launch/: ld06.launch.py  ld19.launch.py  stl27l.launch.py  viewer_ld06.launch.py  viewer_ld19.launch.py  viewer_stl27l.launch.py
install/ldlidar_stl_ros2/share/ldlidar_stl_ros2/rviz2/: ldlidar.rviz
log/: latest_build
src/laser_consumer/: CMakeLists.txt
src/laser_consumer/src/: GoodShit.txt  laser_consumer.cpp  lshaped_fitting.cpp  lshaped_fitting.h
